# tr-103

api/: .env.example  pyproject.toml
api/app/: main.py
api/app/api/: routes.py
api/app/config/: __init__.py  cors_config.py  redis_config.py
api/app/services/: forecast_service.py  yf_service.py
api/app/types/: forecast_data.py  stock_data.py
api/tests/: conftest.py
api/tests/test_api/: __init__.py  test_forecast.py  test_health.py  test_stocks.py
api/tests/test_config/: test_redis_config.py
api/tests/test_services/: test_forecast_service.py  test_yf_service.py  test_yf_service_cache.py
client/: config.example.json  package.json
client/src/: App.tsx  index.css  index.html  index.ts
client/src/components/: AppPage.tsx  DataTable.tsx  Features.tsx  Footer.tsx  ForecastChart.tsx  ForecastTable.tsx  Hero.tsx  HowItWorks.tsx  LandingPage.tsx  Navbar.tsx  Stats.tsx  StockChart.tsx  StockDataApp.tsx
client/src/lib/: api.ts
